portolio-site/src/css/index.scss
//Fonts
@import url(https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap);
@import url(https://fonts.googleapis.com/css2?family=Righteous&display=swap);
@import url(https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap);
@import url(https://fonts.googleapis.com/css2?family=Sora&display=swap);


//Colors

$color1: #492B7C;
$color2: #ED8A0A;
$color3: #F6D912;
$color4: #37225a;
$color5: #4e2c00;


//Fonts
$font1: 'Racing Sans One', serif;
$font2: 'Righteous', cursive;
$font3: 'Rubik Mono One', sans-serif;
$font4: 'Sora', sans-serif;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

//LAYOUT START ---------------------------------------------

//DESKTOP
.container {
    display: grid;
    // height: 400vh; //REMOVE THIS
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 100vh auto auto auto auto;
    grid-template-areas: 
        "main main main main"
        "services services services services"
        "projects projects projects projects"
        "skills skills skills skills"        
        "footer footer footer footer"; 
    // overflow: hidden;   
}

nav {
    position: fixed;
    grid-area: nav; 
    width: 100%;
    height: 8rem;
    z-index: 150;    
    background: #492b7c5b;
    -webkit-backdrop-filter: blur(10px)blur(10px);
    backdrop-filter: blur(10px)blur(10px); 
}
main { 
    grid-area: main; 
    margin-top: 8rem;
}
.services { grid-area: services; }
.skills { grid-area: skills; }
.projects { grid-area: projects; }
footer { grid-area: footer; }

//FULL MENU WRAPPER
.full-menu-wrapper {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: #492b7c5b;
    -webkit-backdrop-filter: blur(10px)blur(12px);
    backdrop-filter: blur(10px)blur(12px);
    transition: .5s;    
}

//MEDIA QUERY FOR MOBILE/TABLET LAYOUT
@media only screen and (max-width: 1024px) {
    .container {
    grid-template-columns: 1fr;
    grid-template-rows: 55vh auto auto auto auto;
    grid-template-areas: 
        "main"
        "services"
        "projects"
        "skills"        
        "footer";    
    }

    nav {
        height: 5rem;
    }

    main {
        margin-top: 5rem;
    }

    .nav-links a {
        display: none;
    }

    .nav-menu-button {
        display: block;
    }
}

//LAYOUT END -----------------------------------------------

//Container
.container {
    background-color: $color1;
}

// NAV
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: $font4;  
    
    h1 {
        color: white;
        visibility: hidden;
        width: 50%;
        text-align: center;
    }
}

.nav-links {
    display: flex;
    justify-content: space-evenly;
    width: 50%;
    margin-right: 5%;

    a {
        text-decoration: none;
        padding: .4rem;
        color: white;
        font-size: 1.5rem;
    }
}

.nav-menu-button {
    display: none;  
    position: fixed;
    top: 1rem;
    right: 2rem;
    z-index: 350;
}

.github-symbol {
    margin-right: .5rem;
}

.menu-symbol {
    font-size: 3rem;
    color: $color2;
    opacity: .9;    
    padding: .4rem .2rem;              
}

//Full Page Menu
.nav-menu-button-inner {
    position: absolute;
    top: 1rem;
    right: 2rem;
}

// MAIN
main {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    background-color: $color1;
    padding: 2rem;
    transition: .2s;
}

#name-container {
    position: relative;
    height: 100%;
    width: 100%;
    font-family: $font2;    
    color: white;    

    h2 {
        -webkit-text-stroke: 5px $color1;
        font-size: 10vw;
        position: absolute;
        font-weight: normal;
        font-style: normal;
        width: 100%;
        z-index: 100;

        &:first-child {
           top: 0;     
           text-align: left;  
           padding-left: 3.5vw;
        }

        &:nth-child(2) {
            top: 18vh;
            text-align: right;
            padding-right: 14vw;
        }
    }

    h3 {
        -webkit-text-stroke: 3px $color1;
        font-size: 5vw;
        position: absolute;
        font-weight: normal;
        font-style: normal;
        width: 100%;
        text-align: center;
        top: 42vh;
        padding-right: 15vw;
        z-index: 100;
    }

    .circle {                
        position: absolute;               
        border-radius: 50%;
        z-index: 50;

        &:nth-of-type(1) {
            // background-color: $color2;
            background: linear-gradient(0.45turn,rgba(0,0,0,0), $color2);
            height: 21vw;
            width: 21vw;
            top: 0;
            left: 15vw;
            animation: circle-up-down 3s ease-in-out infinite;
            animation-delay: 2s;
        }

        &:nth-of-type(2) {
            // background-color: $color3;
            background: linear-gradient(0.45turn,rgba(0,0,0,0), $color3);
            height: 35vw;
            width: 35vw;
            top: 5rem;
            left: 28vw;
            animation: circle-up-down 2.5s ease-in-out infinite;
            animation-delay: 2s;
        }

        @keyframes circle-up-down {
            50% {
                transform: translateY(-4vh);
            }
        }

    }
}
/* ... */

